# serializer version: 1
# name: test_eth[status1.xml]
  list([
    'current_power:2303',
    'grid_voltage:None',
    'grid_l1:241.1',
    'grid_l2:None',
    'grid_l3:None',
    'today_yield:12.55',
    'total_yield:586.85',
    'today_time:6.8',
    'total_time:1278.7',
    'total_co2_reduced:585.09',
    'temperature:46.8',
    'state:Normal',
    'today_max_current:2930',
  ])
# ---
# name: test_eth[status2.xml]
  list([
    'current_power:4986',
    'grid_voltage:243.0',
    'grid_l1:None',
    'grid_l2:None',
    'grid_l3:None',
    'today_yield:14.7',
    'total_yield:2340.2',
    'today_time:8.5',
    'total_time:2267.4',
    'total_co2_reduced:2333.18',
    'temperature:46.8',
    'state:Normal',
    'today_max_current:None',
  ])
# ---
# name: test_eth[status3.xml]
  list([
    'current_power:449',
    'grid_voltage:227.2',
    'grid_l1:None',
    'grid_l2:None',
    'grid_l3:None',
    'today_yield:3.2',
    'total_yield:11356.8',
    'today_time:5.6',
    'total_time:18549.1',
    'total_co2_reduced:11322.73',
    'temperature:29.8',
    'state:Normal',
    'today_max_current:None',
  ])
# ---
# name: test_wifi[0-15020J2012EN02905]
  list([
    'current_power:1921',
    'grid_voltage:None',
    'grid_l1:244.7',
    'grid_l2:None',
    'grid_l3:None',
    'today_yield:19.81',
    'total_yield:12545.79',
    'today_time:11.3',
    'total_time:11652.8',
    'total_co2_reduced:9848.4',
    'temperature:45.3',
    'state:Normal',
    'today_max_current:None',
  ])
# ---
# name: test_wifi[1-21030G1628XXYYYYY]
  list([
    'current_power:1040',
    'grid_voltage:None',
    'grid_l1:241.3',
    'grid_l2:None',
    'grid_l3:None',
    'today_yield:21.07',
    'total_yield:12547.05',
    'today_time:12.5',
    'total_time:11654.0',
    'total_co2_reduced:9849.4',
    'temperature:41.5',
    'state:Normal',
    'today_max_current:None',
  ])
# ---
